ignoreされていないパスを参照するように修正

--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html><html lang="ja"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width"><title> 次郎の配布イラスト一覧</title><style>body { font-size: 20px; background-color: #fafbfc; } .actor-block { display: inline-block; text-align: center; border: 2px solid #aaa; margin: 4px; background-color: white; }</style></head><body><h1>次郎の配布イラスト一覧</h1><h2><a href="https://github.com/jiro4989/dist-illust/releases">ダウンロード</a></h2><hr>
-<div class="actor-block"><div><img src="dist/actor001/stand/right/actor001_r_stand_001_001.png" height="400"></div><div><img src="dist/actor001/face/actor001_face_001_001.png"></div><label>actor001</label></div>
-<div class="actor-block"><div><img src="dist/actor002/stand/right/actor002_r_stand_001_001.png" height="400"></div><div><img src="dist/actor002/face/actor002_face_001_001.png"></div><label>actor002</label></div>
-<div class="actor-block"><div><img src="dist/actor003/stand/right/actor003_r_stand_001_001.png" height="400"></div><div><img src="dist/actor003/face/actor003_face_001_001.png"></div><label>actor003</label></div>
-<div class="actor-block"><div><img src="dist/actor004/stand/right/actor004_r_stand_001_001.png" height="400"></div><div><img src="dist/actor004/face/actor004_face_001_001.png"></div><label>actor004</label></div>
-<div class="actor-block"><div><img src="dist/actor005/stand/right/actor005_r_stand_001_001.png" height="400"></div><div><img src="dist/actor005/face/actor005_face_001_001.png"></div><label>actor005</label></div>
-<div class="actor-block"><div><img src="dist/actor006/stand/right/actor006_r_stand_001_001.png" height="400"></div><div><img src="dist/actor006/face/actor006_face_001_001.png"></div><label>actor006</label></div>
-<div class="actor-block"><div><img src="dist/actor007/stand/right/actor007_r_stand_001_001.png" height="400"></div><div><img src="dist/actor007/face/actor007_face_001_001.png"></div><label>actor007</label></div>
-<div class="actor-block"><div><img src="dist/actor008/stand/right/actor008_r_stand_001_001.png" height="400"></div><div><img src="dist/actor008/face/actor008_face_001_001.png"></div><label>actor008</label></div>
-<div class="actor-block"><div><img src="dist/actor009/stand/right/actor009_r_stand_001_001.png" height="400"></div><div><img src="dist/actor009/face/actor009_face_001_001.png"></div><label>actor009</label></div>
-<div class="actor-block"><div><img src="dist/actor010/stand/right/actor010_r_stand_001_001.png" height="400"></div><div><img src="dist/actor010/face/actor010_face_001_001.png"></div><label>actor010</label></div>
-<div class="actor-block"><div><img src="dist/actor011/stand/right/actor011_r_stand_001_001.png" height="400"></div><div><img src="dist/actor011/face/actor011_face_001_001.png"></div><label>actor011</label></div>
-<div class="actor-block"><div><img src="dist/actor012/stand/right/actor012_r_stand_001_001.png" height="400"></div><div><img src="dist/actor012/face/actor012_face_001_001.png"></div><label>actor012</label></div>
-<div class="actor-block"><div><img src="dist/actor013/stand/right/actor013_r_stand_001_001.png" height="400"></div><div><img src="dist/actor013/face/actor013_face_001_001.png"></div><label>actor013</label></div>
-<div class="actor-block"><div><img src="dist/actor014/stand/right/actor014_r_stand_001_001.png" height="400"></div><div><img src="dist/actor014/face/actor014_face_001_001.png"></div><label>actor014</label></div>
-<div class="actor-block"><div><img src="dist/actor015/stand/right/actor015_r_stand_001_001.png" height="400"></div><div><img src="dist/actor015/face/actor015_face_001_001.png"></div><label>actor015</label></div>
-<div class="actor-block"><div><img src="dist/actor016/stand/right/actor016_r_stand_001_001.png" height="400"></div><div><img src="dist/actor016/face/actor016_face_001_001.png"></div><label>actor016</label></div>
-<div class="actor-block"><div><img src="dist/actor017/stand/right/actor017_r_stand_001_001.png" height="400"></div><div><img src="dist/actor017/face/actor017_face_001_001.png"></div><label>actor017</label></div>
-<div class="actor-block"><div><img src="dist/actor018/stand/right/actor018_r_stand_001_001.png" height="400"></div><div><img src="dist/actor018/face/actor018_face_001_001.png"></div><label>actor018</label></div>
-<div class="actor-block"><div><img src="dist/actor019/stand/right/actor019_r_stand_001_001.png" height="400"></div><div><img src="dist/actor019/face/actor019_face_001_001.png"></div><label>actor019</label></div>
-<div class="actor-block"><div><img src="dist/actor020/stand/right/actor020_r_stand_001_001.png" height="400"></div><div><img src="dist/actor020/face/rpg_maker_mv/right/actor020_r_face_001_001.png"></div><label>actor020</label></div>
-<div class="actor-block"><div><img src="dist/actor021/stand/right/actor021_r_stand_001_001.png" height="400"></div><div><img src="dist/actor021/face/rpg_maker_mv/right/actor021_r_face_001_001.png"></div><label>actor021</label></div>
-<div class="actor-block"><div><img src="dist/actor023/stand/right/actor023_r_stand_001_001.png" height="400"></div><div><img src="dist/actor023/face/rpg_maker_mv/right/actor023_r_face_001_001.png"></div><label>actor023</label></div>
-<div class="actor-block"><div><img src="dist/actor024/stand/right/actor024_r_stand_001_001.png" height="400"></div><div><img src="dist/actor024/face/rpg_maker_mv/right/actor024_r_face_001_001.png"></div><label>actor024</label></div>
+<div class="actor-block"><div><img src="img/stand/actor001_r_stand_001_001.png" height="400"></div><div><img src="img/face/actor001_face_001_001.png"></div></div>
+<div class="actor-block"><div><img src="img/stand/actor002_r_stand_001_001.png" height="400"></div><div><img src="img/face/actor002_face_001_001.png"></div></div>
+<div class="actor-block"><div><img src="img/stand/actor003_r_stand_001_001.png" height="400"></div><div><img src="img/face/actor003_face_001_001.png"></div></div>
+<div class="actor-block"><div><img src="img/stand/actor004_r_stand_001_001.png" height="400"></div><div><img src="img/face/actor004_face_001_001.png"></div></div>
+<div class="actor-block"><div><img src="img/stand/actor005_r_stand_001_001.png" height="400"></div><div><img src="img/face/actor005_face_001_001.png"></div></div>
+<div class="actor-block"><div><img src="img/stand/actor006_r_stand_001_001.png" height="400"></div><div><img src="img/face/actor006_face_001_001.png"></div></div>
+<div class="actor-block"><div><img src="img/stand/actor007_r_stand_001_001.png" height="400"></div><div><img src="img/face/actor007_face_001_001.png"></div></div>
+<div class="actor-block"><div><img src="img/stand/actor008_r_stand_001_001.png" height="400"></div><div><img src="img/face/actor008_face_001_001.png"></div></div>
+<div class="actor-block"><div><img src="img/stand/actor009_r_stand_001_001.png" height="400"></div><div><img src="img/face/actor009_face_001_001.png"></div></div>
+<div class="actor-block"><div><img src="img/stand/actor010_r_stand_001_001.png" height="400"></div><div><img src="img/face/actor010_face_001_001.png"></div></div>
+<div class="actor-block"><div><img src="img/stand/actor011_r_stand_001_001.png" height="400"></div><div><img src="img/face/actor011_face_001_001.png"></div></div>
+<div class="actor-block"><div><img src="img/stand/actor012_r_stand_001_001.png" height="400"></div><div><img src="img/face/actor012_face_001_001.png"></div></div>
+<div class="actor-block"><div><img src="img/stand/actor013_r_stand_001_001.png" height="400"></div><div><img src="img/face/actor013_face_001_001.png"></div></div>
+<div class="actor-block"><div><img src="img/stand/actor014_r_stand_001_001.png" height="400"></div><div><img src="img/face/actor014_face_001_001.png"></div></div>
+<div class="actor-block"><div><img src="img/stand/actor015_r_stand_001_001.png" height="400"></div><div><img src="img/face/actor015_face_001_001.png"></div></div>
+<div class="actor-block"><div><img src="img/stand/actor016_r_stand_001_001.png" height="400"></div><div><img src="img/face/actor016_face_001_001.png"></div></div>
+<div class="actor-block"><div><img src="img/stand/actor017_r_stand_001_001.png" height="400"></div><div><img src="img/face/actor017_face_001_001.png"></div></div>
+<div class="actor-block"><div><img src="img/stand/actor018_r_stand_001_001.png" height="400"></div><div><img src="img/face/actor018_face_001_001.png"></div></div>
+<div class="actor-block"><div><img src="img/stand/actor019_r_stand_001_001.png" height="400"></div><div><img src="img/face/actor019_face_001_001.png"></div></div>
+<div class="actor-block"><div><img src="img/stand/actor020_r_stand_001_001.png" height="400"></div><div><img src="img/face/actor020_r_face_001_001.png"></div></div>
+<div class="actor-block"><div><img src="img/stand/actor021_r_stand_001_001.png" height="400"></div><div><img src="img/face/actor021_r_face_001_001.png"></div></div>
+<div class="actor-block"><div><img src="img/stand/actor023_r_stand_001_001.png" height="400"></div><div><img src="img/face/actor023_r_face_001_001.png"></div></div>
+<div class="actor-block"><div><img src="img/stand/actor024_r_stand_001_001.png" height="400"></div><div><img src="img/face/actor024_r_face_001_001.png"></div></div>
 <hr><h2><a href="https://github.com/jiro4989/dist-illust/releases">ダウンロード</a></h2><small>&copy; 2018 次郎 <a href="https://twitter.com/jiro_saburomaru">@jiro_saburomaru</a></small></body></html>
