--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <div class="actor-block"><div><img src="img/stand/actor019_r_stand_001_001.png" height="400"></div><div><img src="img/face/actor019_face_001_001.png"></div><label>actor019</label></div>
 <div class="actor-block"><div><img src="img/stand/actor020_r_stand_001_001.png" height="400"></div><div><img src="img/face/actor020_r_face_001_001.png"></div><label>actor020</label></div>
 <div class="actor-block"><div><img src="img/stand/actor021_r_stand_001_001.png" height="400"></div><div><img src="img/face/actor021_r_face_001_001.png"></div><label>actor021</label></div>
+<div class="actor-block"><div><img src="img/stand/actor022_r_stand_001_001.png" height="400"></div><div><img src="img/face/actor022_r_face_001_001.png"></div><label>actor022</label></div>
 <div class="actor-block"><div><img src="img/stand/actor023_r_stand_001_001.png" height="400"></div><div><img src="img/face/actor023_r_face_001_001.png"></div><label>actor023</label></div>
 <div class="actor-block"><div><img src="img/stand/actor024_r_stand_001_001.png" height="400"></div><div><img src="img/face/actor024_r_face_001_001.png"></div><label>actor024</label></div>
 <hr><span class="link"><a href="https://jiro4989.github.io/">ブログ</a></span> <span class="link"><a href="https://github.com/jiro4989/dist-illust/releases">ダウンロード</a></span> <span class="link"><a href="https://jiro4989.github.io/dist-illust/target/README.html">利用規約</a></span> <br><br><small>&copy; 2018 次郎 <a href="https://twitter.com/jiro_saburomaru">@jiro_saburomaru</a></small></body></html>
